--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,13 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0.56"
+serde = { version = "1.0.195", features = ["derive"], optional = true }
+
+[dev-dependencies]
+serde_json = "1.0"
+
+[default]
+features = ["serde"]
+
+[package.metadata.docs.rs]
+all-features = true
