refactor: add clippy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ repository = "https://github.com/anonrig/garment"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lints.clippy]
+all = { level = "warn" }
+nursery  = { level = "warn" }
+pedantic = { level = "warn" }
 
 [dependencies]
 thiserror = "1.0.56"
@@ -14,9 +17,6 @@ serde = { version = "1.0.195", features = ["derive"], optional = true }
 
 [dev-dependencies]
 serde_json = "1.0"
-
-[default]
-features = ["serde"]
 
 [package.metadata.docs.rs]
 all-features = true
