--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,19 @@ jobs:
 
       - run: cargo clippy -- -D warnings
 
+  doc:
+    name: Cargo Doc
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: moonrepo/setup-rust@v1
+        with:
+          cache: false
+          components: rust-docs
+
+      - run: RUSTDOCFLAGS='-D warnings' cargo doc
+
   wasm:
     name: Check Wasm
     runs-on: ubuntu-latest
